--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,21 @@
 doctype html
 html
   head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    title 成果物
+    meta(charset="utf-8")
+    meta(http-equiv="X-UA-Compatible" content="IE=edge")
+    meta(name="viewport" content="width=device-width, initial-scale=1")
+    link(rel="stylesheet",
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css",
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm",
+    crossorigin="anonymous")
   body
-    block content
+    nav.navbar.navbar-light.bg-light
+      div.navbar-header
+        a(href="/").navbar-brand.nav-link 成果物
+      ul.navbar-nav
+          li.nav-item
+            a(href="/").nav-link メイン
+            a(href="/logout").nav-link ログアウト
+    div.container
+      block content
