--- a/views/index.pug
+++ b/views/index.pug
@@ -3,7 +3,7 @@ extends layout
 block content
  div.jumbotron.my-3
   h1.display-4 ブログ
-  p.lead このブログは、BASIC認証ができ、記事投稿、記事削除ログイン・ログアウトができるサービスです
+  p.lead このブログは、BASIC認証ができ、記事投稿、記事削除、投稿者ログイン・ログアウト機能があるブログサービスです
   div
     a(href="/delete").btn.btn-info.float-right 記事削除
   div
